--- a/homepage/html/index-1.html
+++ b/homepage/html/index-1.html
@@ -5,17 +5,20 @@
     <title>サービシンクホームページ</title>
     <link rel = "stylesheet" href = "../css/style2.css">
 </head>
+
 <body>
     <header>
         <div class = "header-bar">
             <div class = "header-text"><img src = "../img/img-sample-text.png" alt = "空の画像"></div>
-            <div class = "header-info">
-                <h6 class = "header-tel">TEL 00-0000-0000<br>(受付時間 平日 9:00~17:00)</h6>
-                <a href = "#" class = "contact-btn">お問い合わせ</a>
+            <!-- クラスを共通化して、個別のクラスを適用しました。 -->
+            <div class = "info header-info">
+                <div class = "tel">TEL 00-0000-0000<br>
+                    (受付時間 平日 9:00~17:00)
+                </div>
+                <a href = "#" class = "contact-btn header-btn">お問い合わせ</a>
             </div>
         </div>
         <div class = "header-img">
-            <!-- ここは横をfillして比率で自動調整できるようにしたい -->
             <div class = "catchcopy">キャッチコピー</div>
         </div>
     </header>
@@ -23,12 +26,13 @@
         <section class = "division-line">
             <div class = "line-text">テキストテキストテキスト</div>
         </section>
+        <div class = "division-line-arrow"></div>
         <!-- ここから三つの円 -->
         <section class = "circle-blocks">
             <div class = "circle-block">
                 <div class = "circle">
                     <span>1.テキストテキストテキスト</span>
-                    <div class="arrow"></div>
+                    
                 </div>
             </div>
             <div class = "circle-block">
@@ -46,21 +50,21 @@
         </section>
         <section class="columns">
             <div class="column left-img col-1">
-                <div class="img-area"></div>
+                <div class="img-area"><img src="../img/photo-pc.jpg" class = "col-responsive-img"></div>
                 <div class="column-text">
                     <h3>1.テキストテキストテキスト</h3>
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </div>
             </div>
             <div class="column right-img">
-                <div class="img-area"></div>
+                <div class="img-area"><img src="../img/photo-note.jpg" class = "col-responsive-img"></div>
                 <div class="column-text">
                     <h3>2.テキストテキストテキスト</h3>
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </div>
             </div>
             <div class="column left-img col-2">
-                <div class="img-area"></div>
+                <div class="img-area"><img src="../img/photo-hands.jpg" class = "col-responsive-img"></div>
                 <div class="column-text">
                     <h3>3.テキストテキストテキスト</h3>
                     <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
@@ -70,11 +74,14 @@
     </main>
     <footer>
         <div class="footer-bar">
-            <h6 class = "footer-text">
-                TEL 00-0000-0000<br>
-                (受付時間 平日 9:00〜17:00)
-            </h6>
-            <a href="#" class="footer-btn">問い合わせボタン</a>
+            <!-- クラスを共通化して、個別のクラスを適用しました。 -->
+            <div class="info footer-info">
+                <div>
+                    TEL 00-0000-0000<br>
+                    <small class = "tel">(受付時間 平日 9:00〜17:00)</small>
+                </div>
+                <a href="#" class="contact-btn footer-btn">問い合わせボタン</a>
+            </div>
         </div>
         <div class="copyright">
             <div class = "copyright-text">© sample:sample:sample:sample:sample</div>
